# paft-run

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  USAGE.md  pyproject.toml  quantize.py
i2c/: i2c.py
models/: prep_vision.py
periphery/: gpio.py  main.py  pyproject.toml
servo/: servo.py
src/: actuators.rs  elevenlabs.rs  imu.rs  main.rs  servo.rs  teleop.rs  whisper.rs
src/python/: agent_vision.py  elevenlabs_agent.py  humor_setting.txt  humorous_agent.py  text_only_agent.py  vision_humor.py
