[package]
name = "paft-run"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
ort = { git = "https://github.com/pykeio/ort", tag = "v2.0.0-rc.10", features = ["load-dynamic", "half"] }

i2cdev = "0.6"
nix = "0.30"

tokenizers = "0.22"

flume = "0.11"
half = "2.4"
ndarray = "0.16"
cpal = "0.15"
ringbuf = "0.4"
hound = "3.5"
rustfft = "6.2"
rubato = "0.16"

thiserror = "2.0"

tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
